website/versioned_docs/version-0.86.4/ais_bramka_reset_index.md
---
title: Przywracanie ustawień fabrycznych urządzenia
sidebar_label: Wprowadzenie
id: version-0.86.4-ais_bramka_reset_index
original_id: ais_bramka_reset_index
---

Urządzenie działa na specjalnie zmodyfikowanej wersji systemu Android (custom build). Ta wersja androida posiada preinstalowany system **“Asystent domowy”** oraz wszystkie aplikacje pomocnicze systemu.

Przywracanie ustawień fabrycznych jest przywracaniem systemu do jego pierwotnego/fabrycznego stanu poprzez usunięcie wszystkich informacji zapisanych na urządzeniu. W ten sposób skutecznie usuniesz wszystkie dane, ustawienia i aplikacje, które zainstalowałeś na urządzeniu po jego zakupie. 

> **UWAGA** Przywrócenie urządzenia do pierwotnych ustawień producenta wykonuje się zwykle, aby rozwiązać poważny problem z urządzeniem, którego nie daje się rozwiązać w inny sposób. 
>> System jest w fazie intensywnego rozwoju, dlatego wersja fabrczyna może odbiegać od wersji aktualnej - **pierwsze uruchomienie i ponowna instalacja wszyskich składowych może potrwać znacznie dłużej niż zwykle**.

